--- a/css/popups.css
+++ b/css/popups.css
@@ -288,15 +288,38 @@ background: var(--Shades-White, #FFF);
 
 
 @media (max-width:700px){
+  .map-main{
+    flex-direction: column-reverse;
+    margin-top: 3.45rem;
+  }
+  .left-Map {
+    width: 100%;
+    margin-left: 0rem !important;
+    padding: 0 .5rem;
+  }
+  .Right-Map{
+    width: 100%;
+    position: relative;
+    top: 0;
+  }
+  .map-container .button-div {
+    display: none;
+  }
+  .left-Map .filter-menu-main{
+    padding: 0 0 0 0 !important;
+  }
 }
-#map {
-  width:100%;
-  height: 100%;
-}
+
+
 
 /*
 * Optional: Makes the sample page fill the window.
 */
+
+#map {
+  width:100%;
+  height: 100%;
+}
 
 .price-tag {
 background-color: #FFFFFF;
