--- a/css/popups.css
+++ b/css/popups.css
@@ -242,7 +242,7 @@ background: var(--Shades-White, #FFF);
 }
 .decreade-Map .Right-Map {
   width: 100% !important;
-  margin: 3.5rem 0;
+  margin: 3.5rem 0 0 0;
 }
 .increase-Map .Right-Map {
   width: 0px !important;
@@ -275,7 +275,6 @@ background: var(--Shades-White, #FFF);
   transition: all 1s ease-in-out;
 }
 
-
 .decreade-Map .left-Map .filter-menu-main {
   position: fixed;
   top: 0;
@@ -286,7 +285,6 @@ background: var(--Shades-White, #FFF);
 .increase-Map .left-Map .filter-menu-main {
  margin-right: 10%;
 }
-
 
 /*----------------------------
 listing map mobile wersion
@@ -317,38 +315,56 @@ listing map mobile wersion
     padding: 0 0 0 0 !important;
   }
 
-/*
-* Optional: Makes the sample page fill the window.
-*/
+  .mobile-map-result{
+    flex-direction: column;
+    gap: .5rem;
+    transition: all 1s ease;
+  }
+  .mobile-map-result p {
+    text-align: center;
+    font-size: 24px;
+  }
+  .line-l-m{
+    height: 5px;
+    width: 100px;
+    background-color: #4B4B4D;
+    margin: auto;
+    border-radius: 1rem;
+  }
 
-#map {
-  width:100%;
-  height: 100%;
-}
-
-.price-tag {
-background-color: #FFFFFF;
-border-radius: 8px;
-color: #000000;
-font-size: 14px;
-padding: 10px 15px;
-position: relative;
-font-weight:600;
-}
-
-.price-tag::after {
-content: "";
-position: absolute;
-left: 50%;
-top: 100%;
-transform: translate(-50%, 0);
-width: 0;
-height: 0;
-border-left: 8px solid transparent;
-border-right: 8px solid transparent;
-border-top: 8px solid #FFFFFF;
-}
-/* -----------------------------
- listing map Ends
-------------------------------*/
-}
+  }
+  
+  /*
+  * Optional: Makes the sample page fill the window.
+  */
+  
+  #map {
+    width:100%;
+    height: 100%;
+  }
+  
+  .price-tag {
+  background-color: #FFFFFF;
+  border-radius: 8px;
+  color: #000000;
+  font-size: 14px;
+  padding: 10px 15px;
+  position: relative;
+  font-weight:600;
+  }
+  
+  .price-tag::after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  top: 100%;
+  transform: translate(-50%, 0);
+  width: 0;
+  height: 0;
+  border-left: 8px solid transparent;
+  border-right: 8px solid transparent;
+  border-top: 8px solid #FFFFFF;
+  }
+  /* -----------------------------
+   listing map Ends
+  ------------------------------*/
