--- a/css/popups.css
+++ b/css/popups.css
@@ -325,11 +325,11 @@ listing map mobile wersion
     font-size: 24px;
   }
   .line-l-m{
-    height: 5px;
-    width: 100px;
-    background-color: #4B4B4D;
-    margin: auto;
-    border-radius: 1rem;
+    height: 5px !important;
+    width: 100px !important;
+    background-color: #4B4B4D !important;
+    margin: auto !important;
+    border-radius: 1rem !important;
   }
 
   }
