--- a/css/popups.css
+++ b/css/popups.css
@@ -301,6 +301,7 @@ listing map mobile wersion
     transform: translateY(50vh);
     transition: transform 0.3s ease; /* Smooth transition */
     border-radius: 1rem 1rem 0 0;
+    background-color: white;
   }
   .Right-Map{
     width: 100%;
@@ -330,11 +331,6 @@ listing map mobile wersion
     margin: auto !important;
     border-radius: 1rem !important;
   }
-
-  .filter-menu-main .scroll-next,
-.filter-menu-main .scroll-back {
- display: none;
-}
 
   }
   
