--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1420,6 +1420,16 @@ line-height: 18px; /* 128.571% */
 letter-spacing: -0.078px;
 text-decoration-line: underline;
 }
+.dashboard-font-25{
+  color: var(--Ink-Darkest, #090A0A);
+text-align: center;
+font-family: "DM Sans";
+font-size: 16px;
+font-style: normal;
+font-weight: 500;
+line-height: 21px; /* 131.25% */
+letter-spacing: -0.32px;
+}
 /*----------------------------------
 calander availability font
 ----------------------------------*/
