--- a/css/homepage.css
+++ b/css/homepage.css
@@ -45,6 +45,19 @@
   }
 
 }
+/* dropdown*/
+.height-0-auto {
+  height: 0px;
+  overflow: hidden;
+}
+.dropdown-menu {
+  right: auto !important;
+  left: 50% !important;
+  top: 105% !important;
+  -webkit-transform: translate(-50%, 0);
+  -o-transform: translate(-50%, 0);
+  transform: translate(-50%, 0) !important;
+}
 /*----------------------------
  homepage searchbar ends
  --------------------------- */
