--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -46,13 +46,20 @@ dashboard main
     transition: all 1s ease;
     border-radius: 0;
     margin-left: 1rem;
-    padding: 4px 24px !important;
+    align-items: center;
+    align-self: stretch;
+  }
+  .list-group-item-action:hover {
+    background-color: none !important;
   }
   .list-group-item {
     border: none !important;
-    border-left: 5px solid white !important;
     transition: all .5s ease-in-out;
     width: max-content;
+    display: flex;
+    align-items: flex-start;
+    align-self: stretch;
+    border-left: 5px solid #F6F6F6 !important;
   }
   .dashBoard-page-nav-active .nav-bar-listing-details {
     height: auto;
